<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="Agenda"
    tools:context=".MainActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical">
            <EditText
                android:id="@+id/idAgenda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbLocal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/local"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/formulario_local"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_evento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lbEvento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:text="@string/evento"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/formulario_evento"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />
                </LinearLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_formulario_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formulario_Data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:lines="1"
                    android:inputType="date"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_formulario_hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/horario">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formulario_hora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="time"
                    android:imeActionLabel="@string/pronto"
                    android:imeOptions="actionNext"
                    android:lines="1"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_formulario_valor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valor">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/formulario_valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeActionLabel="@string/pronto"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLines="1"
                    android:textColorLink="@color/colorPrimaryDark" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/lbTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/equipe"
                        android:textSize="16sp"
                        />

                    <Spinner
                        android:id="@+id/formulario_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:spinnerMode="dropdown"
                        android:layout_below="@id/lbTime"/>

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="@dimen/field_width_standard"
                        android:layout_height="match_parent"
                        android:id="@+id/gols1"
                        android:text="0"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:layout_below="@id/formulario_time"
                        android:visibility="gone"
                        />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/lbVersus1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/lbVersus2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingRight="4dp"
                        android:paddingTop="16dp"
                        android:text="@string/versus"
                        android:textSize="16sp"
                        android:visibility="gone"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/lbAdversario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/adversario"
                        android:textSize="16sp"
                        />

                    <Spinner
                        android:id="@+id/formulario_adversario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="2dp"
                        android:spinnerMode="dropdown"
                        android:layout_below="@id/lbAdversario"/>

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/gols2"
                        android:text="0"
                        android:textAlignment="center"
                        android:layout_below="@id/formulario_adversario"
                        android:inputType="number"
                        android:visibility="gone"
                        />

                </RelativeLayout>


            </LinearLayout>


            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/formulario_observacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:text="@string/resultado"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone"
                android:tag="naoObrigatorio"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="left"
                android:padding="10dp"
                android:id="@+id/linear_botoes_agenda">

                <Button
                    android:id="@+id/bt_salvar_agenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salvar"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/texto_btn"
                    android:theme="@style/btnSalvar" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
