<resources>
    <string name="app_name">ProximoJogo</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">Próximo Jogo</string>

    <!-- Agenda Fragment -->
    <string name="local">Local</string>
    <string name="evento">Evento</string>
    <string name="inicio">Inicio</string>
    <string name="horario">Horario</string>
    <string name="data">Data</string>
    <string name="valor">Valor</string>
    <string name="equipe">Equipe</string>
    <string name="versus">X</string>
    <string name="adversario">Adversário</string>
    <string name="observacao">Observação</string>
    <string name="salvar">Salvar</string>
    <string name="listar">Listar</string>
    <string name="excluir">Excluir</string>
    <string name="dia_semana">Dia Semana</string>
    <string name="criar_evento">Criar Evento</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pronto">OK</string>
    <string name="nome">Nome</string>
    <string name="responsavel">Responsavel</string>
    <string name="endereco">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="horario_fim">Horario_fim</string>
    <string name="resultado">Resultado</string>
    <string name="adUnitIdTeste">ca-app-pub-3940256099942544/6300978111</string>
    <string name="sign_out">Deslogar</string>
    <string name="disconnect">Desconectar</string>
    <string name="server_client_id">562645584714-47bmihqkkalcb22lie84h1b111lvkd8o.apps.googleusercontent.com</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
